fixed: Color picker tool is not centered when used in Regions
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/themes/upfront@15381 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -7478,8 +7478,8 @@ License: MIT
 	border-right-color:inherit;
 	border-bottom-color:inherit;
 	border-left-color:inherit;
-	left: -28px;
-	top: -28px;
+	left: -34px;
+	top: -34px;
 	display:none;
 }
 
